--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ body {
     background-color: var(--color-black);
 } */
 .site-banner .banner-area {
-    background:url(./assets/img/bg-cover.jpg)no-repeat;
+    background:url(./assets/img/bg-cover.JPG)no-repeat;
     background-size: cover;
     width:100%;
     height:100vh;
